--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx prettier --write scss/",
+    "test": "npx p  rettier --write scss/",
     "watch": "watch 'npm run css' ./scss",
     "build": "npm-run-all copy:bootstrap css:compile",
     "copy:bootstrap": "cp node_modules/bootstrap/dist/js/bootstrap.bundle.min.* public/assets/js/",
@@ -13,24 +13,23 @@
     "css:prefix": "postcss --replace assets/css/main.css --use autoprefixer --map",
     "css": "npm-run-all css:compile css:prefix"
   },
-
   "author": "Laurin Sawellion",
-
   "dependencies": {
     "@types/node": "^20.12.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
+    "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.69.5",
-    "watch": "^0.13.0",
-    "bootstrap-icons": "^1.11.1",
-    "@types/express": "^4.17.21",
-    "nodemon": "^3.1.0"
+    "watch": "^0.13.0"
   }
 }
